--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
   },
   "scripts": {
     "dev": "ts-node-dev --inspect --transpile-only --ignore-watch node_modules --respawn src/index.ts",
-    "start": "tsc && tsnd ./src/index.ts"
+    "start": "tsc && tsnd ./src/index.ts",
+    "migrations": "tsnd ./src/Data/Migrations/migrations.ts"
   },
   "dependencies": {
     "@types/bcryptjs": "^2.4.2",
