--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -23,8 +23,7 @@ services:
     ports:
       - '3306'
     volumes:
-       - db:/var/lib/mysql
-       - ./db/init.sql:/docker-entrypoint-initdb.d/init.sql
+       - .:/usr/mysql
 volumes:
   db:
     driver: local
