--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "eslint-plugin-prettier": "^4.0.0",
     "prettier": "^2.3.2",
     "ts-node-dev": "^1.1.8",
-    "typescript": "^4.4.2"
+    "ts-node": "9.1.1",
+    "typescript": "^4.6.2"
   }
 }
