--- a/package.json
+++ b/package.json
@@ -24,6 +24,9 @@
     "knex": "^1.0.5",
     "moment": "^2.29.2",
     "mysql": "^2.18.1",
+    "ts-node": "^10.7.0",
+    "ts-node-dev": "^1.1.8",
+    "typescript": "^4.6.3",
     "uuid": "^8.3.2"
   },
   "devDependencies": {
@@ -37,9 +40,6 @@
     "eslint-plugin-import": "^2.24.2",
     "eslint-plugin-import-helpers": "^1.1.0",
     "eslint-plugin-prettier": "^4.0.0",
-    "prettier": "^2.3.2",
-    "ts-node-dev": "^1.1.8",
-    "ts-node": "9.1.1",
-    "typescript": "^4.6.2"
+    "prettier": "^2.3.2"
   }
 }
